Fix header font size on mobile

--- a/stylesheets/agile.css
+++ b/stylesheets/agile.css
@@ -835,7 +835,7 @@ a:active {
   }
 
   .header--title {
-    font-size: 285%;
+    font-size: 250%;
   }
 
   .header--title span:nth-child(3) {
